--- a/WebService/form.html
+++ b/WebService/form.html
@@ -2,6 +2,11 @@
 <html>
 <body>
 <h2>Enter search term and how long to search</h2>
+<h2>Tips:</h2>
+<h3>Use popular search terms</h3>
+<h3>Recommended search time 0.3</h3>
+<h3>1 = 1 min</h3>
+<h3>0.3 = 20secs</h3>
 
 <form action="/home" method = "POST">
   Search Term:<br>
